BEEWEB-119 Fix problem with slicing dialog window not showing scroll in mobile resolutions

--- a/src/octoprint/static/css/bee.css
+++ b/src/octoprint/static/css/bee.css
@@ -1816,6 +1816,10 @@ label:hover:before {
         height: 80%;
         width: 70px;
     }
+
+    #slicing_configuration_dialog {
+        position: absolute !important;
+    }
 }
 
 @media (max-width: 480px){
